Closed
Bug 14739
Opened 26 years ago
Closed 26 years ago
use of uninitialized variable in nsNNTPProtocol.cpp
Categories
(MailNews Core :: Backend, defect, P3)
MailNews Core
Backend
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: colin, Assigned: mscott)
Details
In mailnews/news/src/nsNNTPProtocol.cpp is a function
named nsNNTPProtocol::CloseSocket(). In this function is
the code:
if (m_newsgroupList)
{
int status;
nsresult rv;
/* XXX - how/when to Release() this? */
rv = m_newsgroupList->FinishXOVERLINE(status,&status);
Notice that status is passed in to FinishXOVERLINE before it has
been given a value.
Colin.
Updated•26 years ago
|
Assignee: phil → mscott
Comment 1•26 years ago
|
||
Reassign to mscott, cc sspitzer
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•26 years ago
|
||
Yuck....I have a fix. Will get a code review from sspitzer and I'll try to check
this in today. It's so low risk that we should be able to get it approved.
| Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 3•26 years ago
|
||
I checked in the fix for this problem.Good catch Colin.
Comment 4•26 years ago
|
||
yes, thanks for finding this.
The new code is the following. VERIFIED.
if (m_newsgroupList)
4996 {
4997 int status;
4998 nsresult rv;
4999 /* XXX - how/when to Release() this? */
5000 rv = m_newsgroupList->FinishXOVERLINE(0,&status);
5001 NS_ASSERTION(NS_SUCCEEDED(rv), "FinishXOVERLINE failed");
5002 }
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•