Bug #14739 --> fix use of unitiailized variable. r=sspitzer